--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,22 @@
     transform: translateY(0px);
   }
 }
+
+.Register-bg {
+  background-color: rgb(176, 231, 244);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.Register-bg::before {
+  content: '';
+  position: absolute;
+  min-width: 300px;
+  padding: 20px;
+  height: 250px;
+  border: 1px solid rgb(48, 64, 167);
+  border-radius: 10px;
+}
